src/main/fabric8/eap/https-route.yml
---
kind: Route
apiVersion: v1
id: ${profile.application.name}-https
metadata:
  name: secure-${profile.application.name}
  labels:
    application: ${profile.application.name}
  annotations:
    description: Route for application's https service.
spec:
  host: ${profile.application.baseurl.secure.hostname}
  to:
    name: secure-${profile.application.name}
  tls:
    termination: passthrough
